[gd_scene load_steps=20 format=2]

[ext_resource path="res://Textures/Enemys/Shooting_Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemys/EnemyShooter.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemys/EnemyShooterScene.gd" type="Script" id=3]
[ext_resource path="res://Textures/Enemys/Shooting_Enemy_dead.png" type="Texture" id=5]
[ext_resource path="res://Sounds&Music/Shoot.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 25 )

[sub_resource type="Curve" id=3]
max_value = 100.0
_data = [ Vector2( 0, 0 ), 0.0, 164.286, 0, 0, Vector2( 1, 51.1364 ), 10.7713, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.549296, 1 )
colors = PoolColorArray( 0.631373, 0.0431373, 0.0431373, 1, 0.631373, 0.0431373, 0.0431373, 1, 0.286275, 0.0156863, 0.0156863, 0 )

[sub_resource type="Curve" id=5]
max_value = 100.0
_data = [ Vector2( 0, 0 ), 0.0, 164.286, 0, 0, Vector2( 1, 51.1364 ), 10.7713, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.549296, 1 )
colors = PoolColorArray( 0.631373, 0.0431373, 0.0431373, 1, 0.631373, 0.0431373, 0.0431373, 1, 0.286275, 0.0156863, 0.0156863, 0 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 19, 2, 4, 2 )

[sub_resource type="Animation" id=9]
resource_name = "dead"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Dead_Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PBodyRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PBodyLeft:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dead_Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.376471, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dead_particles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PBodyRight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.18, 2.9, 0.18, 2.9 ),
"update": 0,
"values": [ Vector2( 5, 3.5 ), Vector2( 5, 5 ), Vector2( 5, 3.5 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PBodyRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PBodyLeft:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.18, 2.9, 0.18, 2.9 ),
"update": 0,
"values": [ Vector2( 5, 3.5 ), Vector2( 5, 5 ), Vector2( 5, 3.5 ), Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PBodyLeft:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "ready"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PBodyRight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 0.22, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 5 ), Vector2( 2, 5 ), Vector2( 7, 2 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PBodyRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 0.22, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PBodyLeft:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 0.22, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 5 ), Vector2( 2, 5 ), Vector2( 7, 2 ), Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PBodyLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 0.22, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("PBodyRight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 5 ), Vector2( 2, 5 ), Vector2( 7, 2 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PBodyLeft:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 5 ), Vector2( 2, 5 ), Vector2( 7, 2 ), Vector2( 5, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PBodyRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PBodyLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PBodyRight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PBodyRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PBodyLeft:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PBodyLeft:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PBodyRight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.18, 2.9, 0.18, 2.9 ),
"update": 0,
"values": [ Vector2( 5, 3.5 ), Vector2( 5, 5 ), Vector2( 5, 3.5 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PBodyRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PBodyLeft:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.18, 2.9, 0.18, 2.9 ),
"update": 0,
"values": [ Vector2( 5, 3.5 ), Vector2( 5, 5 ), Vector2( 5, 3.5 ), Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PBodyLeft:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0 ]
}

[node name="EnemyShooterScene" type="Node2D"]
script = ExtResource( 3 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="EnemyShooter" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyShooter"]
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="HandPos" type="Position2D" parent="EnemyShooter"]
position = Vector2( 0, -7 )

[node name="DetectArea" type="Area2D" parent="EnemyShooter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyShooter/DetectArea"]
shape = SubResource( 2 )

[node name="Eaten_particles" type="CPUParticles2D" parent="EnemyShooter"]
position = Vector2( -9.53674e-07, 1.19209e-07 )
rotation = -1.57079
scale = Vector2( 5, 5 )
emitting = false
amount = 5
one_shot = true
explosiveness = 1.0
spread = 87.95
gravity = Vector2( -100, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
damping_curve = SubResource( 3 )
scale_amount = 1.3
scale_amount_random = 0.5
color_ramp = SubResource( 4 )

[node name="Dead_particles" type="CPUParticles2D" parent="EnemyShooter"]
position = Vector2( -9.53674e-07, 1.19209e-07 )
rotation = -0.523598
scale = Vector2( 5, 5 )
z_index = -1
emitting = false
amount = 5
lifetime = 4.0
one_shot = true
explosiveness = 1.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
damping = 50.0
damping_curve = SubResource( 5 )
scale_amount = 1.5
scale_amount_random = 1.0
color_ramp = SubResource( 6 )

[node name="Dead_Sprite" type="Sprite" parent="EnemyShooter"]
modulate = Color( 0.376471, 0, 0, 0 )
position = Vector2( -9.53674e-07, 1.19209e-07 )
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 5 )

[node name="PBodyRight" type="Sprite" parent="EnemyShooter"]
visible = false
scale = Vector2( 5, 5 )
texture = SubResource( 7 )

[node name="PHand1" type="Sprite" parent="EnemyShooter/PBodyRight"]
position = Vector2( 2.42857, -0.999988 )
rotation = 1.57079
texture = SubResource( 8 )
offset = Vector2( 2, -1 )

[node name="ShootPos" type="Position2D" parent="EnemyShooter/PBodyRight/PHand1"]
position = Vector2( 3.78572, -1.5714 )
rotation = -1.57079
scale = Vector2( 0.285714, 0.285714 )

[node name="PHand2" type="Sprite" parent="EnemyShooter/PBodyRight"]
visible = false
position = Vector2( 2.42857, -1.99999 )
rotation = -7.85397
texture = SubResource( 8 )
offset = Vector2( 2, 0 )

[node name="ShootPos" type="Position2D" parent="EnemyShooter/PBodyRight/PHand2"]
position = Vector2( 3.7857, -0.714334 )
rotation = 1.57078
scale = Vector2( 0.285714, 0.285714 )

[node name="PBodyLeft" type="Sprite" parent="EnemyShooter"]
visible = false
scale = Vector2( 5, 5 )
texture = SubResource( 7 )
flip_h = true

[node name="PHand1" type="Sprite" parent="EnemyShooter/PBodyLeft"]
position = Vector2( -2.57143, -0.999988 )
rotation = 1.57079
texture = SubResource( 8 )
offset = Vector2( 2, 1 )
flip_v = true

[node name="ShootPos" type="Position2D" parent="EnemyShooter/PBodyLeft/PHand1"]
position = Vector2( 3.7857, 1.57145 )
rotation = -1.57079
scale = Vector2( 0.285714, 0.285714 )

[node name="PHand2" type="Sprite" parent="EnemyShooter/PBodyLeft"]
position = Vector2( -2.57143, -1.99999 )
rotation = -7.85397
texture = SubResource( 8 )
offset = Vector2( 2, 0 )
flip_v = true

[node name="ShootPos" type="Position2D" parent="EnemyShooter/PBodyLeft/PHand2"]
position = Vector2( 3.78572, 0.714241 )
rotation = 1.57078
scale = Vector2( 0.285714, 0.285714 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyShooter"]
anims/dead = SubResource( 9 )
anims/run = SubResource( 10 )
anims/spawn = SubResource( 11 )
anims/spawn2 = SubResource( 12 )
anims/stay = SubResource( 13 )
anims/walk = SubResource( 14 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -17.0
__meta__ = {
"_editor_description_": ""
}
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="eaten" from="EnemyShooter" to="." method="Eaten"]
[connection signal="area_entered" from="EnemyShooter/DetectArea" to="EnemyShooter" method="_DetectArea_area_entered"]
[connection signal="animation_finished" from="EnemyShooter/AnimationPlayer" to="EnemyShooter" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="EnemyShooter/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
